--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ div.親1 {
   flex-direction: column;
   align-items: center; 
   width: 99.9%;
-  height: 200%;
+  height: 200vh;　
 }
 
  div.子1 {
@@ -17,31 +17,41 @@ div.親1 {
   background-color:rgba(200,250,0,0.2);
   display: flex;
   flex-wrap: wrap;  
-  width: 70%;　
+  width: 75%;
+  height: 80%; 
 } 
+
+ div.子2 {
+  border: 3px solid red;
+  background-color:rgba(250,250,0,0.2);
+  display: flex;
+  flex-wrap: wrap;  
+  width: 75%;
+  height: 80%; 
+}   
  
-div.ヘア1 img {
+div.ヘア1 {
   border: 5px solid aqua;
   background-color:rgba(0,250,200,0.2);
   width: 30%;
   box-sizing:border-box;
   flex-basis: 30%;  //要素を並べて親を超えないまで、または2つ並べて親を超える場合は、flex-wrap無効、要素が3つ以上並べ親を超えるとflex-wrapが動作  
 }
-div.ヘア2 img {
+div.ヘア2 {
   border: 5px solid aqua;
   background-color:rgba(0,250,200,0.2);
   width: 30%;
   box-sizing:border-box;
   flex-basis: 30%;  //要素を並べて親を超えないまで、または2つ並べて親を超える場合は、flex-wrap無効、要素が3つ以上並べ親を超えるとflex-wrapが動作
 }  
-div.ヘア3 img {
+div.ヘア3 {
   border: 5px solid aqua;
   background-color:rgba(0,250,200,0.2);
   width: 30%;
   box-sizing:border-box;
   flex-basis: 30%;  //要素を並べて親を超えないまで、または2つ並べて親を超える場合は、flex-wrap無効、要素が3つ以上並べ親を超えるとflex-wrapが動作
  }
-div.ヘア4 img {
+div.ヘア4 {
   border: 5px solid aqua;
   background-color:rgba(0,250,200,0.2);
   width: 30%;
@@ -59,7 +69,7 @@ div.親1 {
   flex-direction: column;
   align-items: center;   
   width: 99.9%;
-  height: 200%; 
+  height: 200vh; 
 }
 
  div.子1 {
@@ -67,30 +77,41 @@ div.親1 {
   background-color:rgba(200,250,0,0.2);
   display: flex;
   flex-wrap: wrap;  
-  width: 70%;　
+  width: 75%;　
+  height: 80%;
 } 
-   div.ヘア1 img {
+
+    div.子2 {
+  border: 5px solid red;
+  background-color:rgba(250,250,0,0.2);
+  display: flex;
+  flex-wrap: wrap;  
+  width: 75%;
+  height: 80%; 
+} 
+   
+   div.ヘア1 {
   border: 5px solid aqua;
   background-color:rgba(0,250,200,0.2);
   width: 30%;
   box-sizing:border-box;
   flex-basis: 30%;  //要素を並べて親を超えないまで、または2つ並べて親を超える場合は、flex-wrap無効、要素が3つ以上並べ親を超えるとflex-wrapが動作  
 }
-div.ヘア2 img {
+div.ヘア2 {
   border: 5px solid aqua;
   background-color:rgba(0,250,200,0.2);
   width: 30%;
   box-sizing:border-box;
   flex-basis: 30%;  //要素を並べて親を超えないまで、または2つ並べて親を超える場合は、flex-wrap無効、要素が3つ以上並べ親を超えるとflex-wrapが動作
 }  
-div.ヘア3 img {
+div.ヘア3 {
   border: 5px solid aqua;
   background-color:rgba(0,250,200,0.2);
   width: 30%;
   box-sizing:border-box;
   flex-basis: 30%;  //要素を並べて親を超えないまで、または2つ並べて親を超える場合は、flex-wrap無効、要素が3つ以上並べ親を超えるとflex-wrapが動作
  }
-div.ヘア4 img {
+div.ヘア4 {
   border: 5px solid aqua;
   background-color:rgba(0,250,200,0.2);
   width: 30%;
@@ -107,7 +128,7 @@ div.ヘア4 img {
   flex-direction: column;
   align-items: center;   
   width: 99.9%;
-  height: 200%;  
+  height: 200vh;  
 }
 
  div.子1 {
@@ -115,31 +136,41 @@ div.ヘア4 img {
   background-color:rgba(200,250,0,0.2);
   display: flex;
   flex-wrap: wrap;  
-  width: 80%;　
+  width: 80%;
+  height: 80%;
 }  
- 
-div.ヘア1 img {
+
+    div.子2 {
+  border: 7px solid red;
+  background-color:rgba(250,250,0,0.2);
+  display: flex;
+  flex-wrap: wrap;  
+  width: 80%;
+  height: 80%; 
+} 
+   
+div.ヘア1 {
   border: 5px solid aqua;
   background-color:rgba(0,250,200,0.2);
   width: 30%;
   box-sizing:border-box;
   flex-basis: 30%;  //要素を並べて親を超えないまで、または2つ並べて親を超える場合は、flex-wrap無効、要素が3つ以上並べ親を超えるとflex-wrapが動作  
 }
-div.ヘア2 img {
+div.ヘア2 {
   border: 5px solid aqua;
   background-color:rgba(0,250,200,0.2);
   width: 30%;
   box-sizing:border-box;
   flex-basis: 30%;  //要素を並べて親を超えないまで、または2つ並べて親を超える場合は、flex-wrap無効、要素が3つ以上並べ親を超えるとflex-wrapが動作
 }  
-div.ヘア3 img {
+div.ヘア3 {
   border: 5px solid aqua;
   background-color:rgba(0,250,200,0.2);
   width: 30%;
   box-sizing:border-box;
   flex-basis: 30%;  //要素を並べて親を超えないまで、または2つ並べて親を超える場合は、flex-wrap無効、要素が3つ以上並べ親を超えるとflex-wrapが動作
  }
-div.ヘア4 img {
+div.ヘア4 {
   border: 5px solid aqua;
   background-color:rgba(0,250,200,0.2);
   width: 30%;
