--- a/style.css
+++ b/style.css
@@ -17,8 +17,8 @@ div.親1 {
   background-color:rgba(200,250,0,0.2);
   display: flex;
   flex-wrap: wrap;  
-  width: 75%;
-  height: 80%; 
+  width: 90%;
+  height: 70vh; 
 } 
 
  div.子2 {
@@ -26,35 +26,39 @@ div.親1 {
   background-color:rgba(250,250,0,0.2);
   display: flex;
   flex-wrap: wrap;  
-  width: 75%;
-  height: 80%; 
+  width: 90%;
+  height: 70vh; 
 }   
  
 div.ヘア1 {
   border: 5px solid aqua;
   background-color:rgba(0,250,200,0.2);
-  width: 30%;
+  width: 43%;
+  height: 45%; 
   box-sizing:border-box;
   flex-basis: 30%;  //要素を並べて親を超えないまで、または2つ並べて親を超える場合は、flex-wrap無効、要素が3つ以上並べ親を超えるとflex-wrapが動作  
 }
 div.ヘア2 {
   border: 5px solid aqua;
   background-color:rgba(0,250,200,0.2);
-  width: 30%;
+  width: 43%;
+  height: 45%; 
   box-sizing:border-box;
   flex-basis: 30%;  //要素を並べて親を超えないまで、または2つ並べて親を超える場合は、flex-wrap無効、要素が3つ以上並べ親を超えるとflex-wrapが動作
 }  
 div.ヘア3 {
   border: 5px solid aqua;
   background-color:rgba(0,250,200,0.2);
-  width: 30%;
+  width: 43%;
+  height: 45%; 
   box-sizing:border-box;
   flex-basis: 30%;  //要素を並べて親を超えないまで、または2つ並べて親を超える場合は、flex-wrap無効、要素が3つ以上並べ親を超えるとflex-wrapが動作
  }
 div.ヘア4 {
   border: 5px solid aqua;
   background-color:rgba(0,250,200,0.2);
-  width: 30%;
+  width: 43%;
+  height: 45%; 
   box-sizing:border-box;
   flex-basis: 30%;  //要素を並べて親を超えないまで、または2つ並べて親を超える場合は、flex-wrap無効、要素が3つ以上並べ親を超えるとflex-wrapが動作
 }
@@ -77,8 +81,8 @@ div.親1 {
   background-color:rgba(200,250,0,0.2);
   display: flex;
   flex-wrap: wrap;  
-  width: 75%;　
-  height: 80%;
+  width: 90%;　
+  height: 70vh;
 } 
 
     div.子2 {
@@ -86,37 +90,41 @@ div.親1 {
   background-color:rgba(250,250,0,0.2);
   display: flex;
   flex-wrap: wrap;  
-  width: 75%;
-  height: 80%; 
+  width: 90%;
+  height: 70vh; 
 } 
    
    div.ヘア1 {
   border: 5px solid aqua;
   background-color:rgba(0,250,200,0.2);
-  width: 30%;
+  width: 43%;
+  height: 45%; 
   box-sizing:border-box;
-  flex-basis: 30%;  //要素を並べて親を超えないまで、または2つ並べて親を超える場合は、flex-wrap無効、要素が3つ以上並べ親を超えるとflex-wrapが動作  
+  flex-basis: 43%;  //要素を並べて親を超えないまで、または2つ並べて親を超える場合は、flex-wrap無効、要素が3つ以上並べ親を超えるとflex-wrapが動作  
 }
 div.ヘア2 {
   border: 5px solid aqua;
   background-color:rgba(0,250,200,0.2);
-  width: 30%;
+  width: 43%;
+  height: 45%; 
   box-sizing:border-box;
-  flex-basis: 30%;  //要素を並べて親を超えないまで、または2つ並べて親を超える場合は、flex-wrap無効、要素が3つ以上並べ親を超えるとflex-wrapが動作
+  flex-basis: 43%;  //要素を並べて親を超えないまで、または2つ並べて親を超える場合は、flex-wrap無効、要素が3つ以上並べ親を超えるとflex-wrapが動作
 }  
 div.ヘア3 {
   border: 5px solid aqua;
   background-color:rgba(0,250,200,0.2);
-  width: 30%;
+  width: 43%;
+  height: 45%; 
   box-sizing:border-box;
-  flex-basis: 30%;  //要素を並べて親を超えないまで、または2つ並べて親を超える場合は、flex-wrap無効、要素が3つ以上並べ親を超えるとflex-wrapが動作
+  flex-basis: 43%;  //要素を並べて親を超えないまで、または2つ並べて親を超える場合は、flex-wrap無効、要素が3つ以上並べ親を超えるとflex-wrapが動作
  }
 div.ヘア4 {
   border: 5px solid aqua;
   background-color:rgba(0,250,200,0.2);
-  width: 30%;
+  width: 43%;
+  height: 45%;  
   box-sizing:border-box;
-  flex-basis: 30%;  //要素を並べて親を超えないまで、または2つ並べて親を超える場合は、flex-wrap無効、要素が3つ以上並べ親を超えるとflex-wrapが動作
+  flex-basis: 43%;  //要素を並べて親を超えないまで、または2つ並べて親を超える場合は、flex-wrap無効、要素が3つ以上並べ親を超えるとflex-wrapが動作
 }
   
 }  
@@ -136,8 +144,8 @@ div.ヘア4 {
   background-color:rgba(200,250,0,0.2);
   display: flex;
   flex-wrap: wrap;  
-  width: 80%;
-  height: 80%;
+  width: 90%;
+  height: 70vh;
 }  
 
     div.子2 {
@@ -145,37 +153,41 @@ div.ヘア4 {
   background-color:rgba(250,250,0,0.2);
   display: flex;
   flex-wrap: wrap;  
-  width: 80%;
-  height: 80%; 
+  width: 90%;
+  height: 70vh; 
 } 
    
 div.ヘア1 {
   border: 5px solid aqua;
   background-color:rgba(0,250,200,0.2);
-  width: 30%;
+  width: 25%;
+  height: 90%; 
   box-sizing:border-box;
-  flex-basis: 30%;  //要素を並べて親を超えないまで、または2つ並べて親を超える場合は、flex-wrap無効、要素が3つ以上並べ親を超えるとflex-wrapが動作  
+  flex-basis: 25%;  //要素を並べて親を超えないまで、または2つ並べて親を超える場合は、flex-wrap無効、要素が3つ以上並べ親を超えるとflex-wrapが動作  
 }
 div.ヘア2 {
   border: 5px solid aqua;
   background-color:rgba(0,250,200,0.2);
-  width: 30%;
+  width: 25%;
+  height: 90%; 
   box-sizing:border-box;
-  flex-basis: 30%;  //要素を並べて親を超えないまで、または2つ並べて親を超える場合は、flex-wrap無効、要素が3つ以上並べ親を超えるとflex-wrapが動作
+  flex-basis: 25%;  //要素を並べて親を超えないまで、または2つ並べて親を超える場合は、flex-wrap無効、要素が3つ以上並べ親を超えるとflex-wrapが動作
 }  
 div.ヘア3 {
   border: 5px solid aqua;
   background-color:rgba(0,250,200,0.2);
-  width: 30%;
+  width: 25%;
+  height: 90%; 
   box-sizing:border-box;
-  flex-basis: 30%;  //要素を並べて親を超えないまで、または2つ並べて親を超える場合は、flex-wrap無効、要素が3つ以上並べ親を超えるとflex-wrapが動作
+  flex-basis: 25%;  //要素を並べて親を超えないまで、または2つ並べて親を超える場合は、flex-wrap無効、要素が3つ以上並べ親を超えるとflex-wrapが動作
  }
 div.ヘア4 {
   border: 5px solid aqua;
   background-color:rgba(0,250,200,0.2);
-  width: 30%;
+  width: 25%;
+  height: 90%; 
   box-sizing:border-box;
-  flex-basis: 30%;  //要素を並べて親を超えないまで、または2つ並べて親を超える場合は、flex-wrap無効、要素が3つ以上並べ親を超えるとflex-wrapが動作
+  flex-basis: 25%;  //要素を並べて親を超えないまで、または2つ並べて親を超える場合は、flex-wrap無効、要素が3つ以上並べ親を超えるとflex-wrapが動作
 }
   
 }  
