--- a/style.css
+++ b/style.css
@@ -30,7 +30,25 @@ div.親1 {
   width: 90%;
   height: 85vh; 
 }   
- 
+
+div.孫1 {
+  border: 3px solid blue;
+  background-color:rgba(0,0,250,0.2);
+  width: 85%;
+  height: 45%; 
+  box-sizing:border-box;
+  flex-basis: 85%;  //要素を並べて親を超えないまで、または2つ並べて親を超える場合は、flex-wrap無効、要素が3つ以上並べ親を超えるとflex-wrapが動作  
+}
+
+div.孫2 {
+  border: 3px solid green;
+  background-color:rgba(0,250,0,0.2);
+   width: 85%;
+  height: 45%; 
+  box-sizing:border-box;
+  flex-basis: 85%;  //要素を並べて親を超えないまで、または2つ並べて親を超える場合は、flex-wrap無効、要素が3つ以上並べ親を超えるとflex-wrapが動作  
+}  
+  
 div.ヘア1 {
   border: 5px solid aqua;
   background-color:rgba(0,250,200,0.2);
@@ -86,7 +104,6 @@ div.親1 {
   width: 90%;　
   height: 85vh;
 } 
-
     div.子2 {
   border: 5px solid red;
   background-color:rgba(250,250,0,0.2);
@@ -94,6 +111,24 @@ div.親1 {
   flex-wrap: wrap;  
   width: 90%;
   height: 85vh; 
+} 
+
+   div.孫1 {
+  border: 3px solid blue;
+  background-color:rgba(0,0,250,0.2);
+  width: 85%;
+  height: 45%; 
+  box-sizing:border-box;
+  flex-basis: 85%;  //要素を並べて親を超えないまで、または2つ並べて親を超える場合は、flex-wrap無効、要素が3つ以上並べ親を超えるとflex-wrapが動作  
+}
+
+div.孫2 {
+  border: 3px solid green;
+  background-color:rgba(0,250,0,0.2);
+   width: 85%;
+  height: 45%; 
+  box-sizing:border-box;
+  flex-basis: 85%;  //要素を並べて親を超えないまで、または2つ並べて親を超える場合は、flex-wrap無効、要素が3つ以上並べ親を超えるとflex-wrapが動作  
 } 
    
    div.ヘア1 {
@@ -158,6 +193,24 @@ div.ヘア4 {
   flex-wrap: wrap;  
   width: 90%;
   height: 85vh; 
+} 
+
+div.孫1 {
+  border: 3px solid blue;
+  background-color:rgba(0,0,250,0.2);
+  width: 45%;
+  height: 45%; 
+  box-sizing:border-box;
+  flex-basis: 45%;  //要素を並べて親を超えないまで、または2つ並べて親を超える場合は、flex-wrap無効、要素が3つ以上並べ親を超えるとflex-wrapが動作  
+}
+
+div.孫2 {
+  border: 3px solid green;
+  background-color:rgba(0,250,0,0.2);
+  width: 45%;
+  height: 45%; 
+  box-sizing:border-box;
+  flex-basis: 45%;  //要素を並べて親を超えないまで、または2つ並べて親を超える場合は、flex-wrap無効、要素が3つ以上並べ親を超えるとflex-wrapが動作  
 } 
    
 div.ヘア1 {
