--- a/style.css
+++ b/style.css
@@ -55,7 +55,7 @@ div.ヘア1 {
   width: 47.5%;
   height: 90%; 
   box-sizing:border-box;
-  flex-basis: 47.5%;  //要素を並べて親を超えないまで、または2つ並べて親を超える場合は、flex-wrap無効、要素が3つ以上並べ親を超えるとflex-wrapが動作  
+  flex-basis: auto;  //要素を並べて親を超えないまで、または2つ並べて親を超える場合は、flex-wrap無効、要素が3つ以上並べ親を超えるとflex-wrapが動作  
 }
 div.ヘア2 {
   border: 5px solid aqua;
@@ -63,7 +63,7 @@ div.ヘア2 {
   width: 47.5%;
   height: 90%; 
   box-sizing:border-box;
-  flex-basis: 47.5%;  //要素を並べて親を超えないまで、または2つ並べて親を超える場合は、flex-wrap無効、要素が3つ以上並べ親を超えるとflex-wrapが動作
+  flex-basis: auto;  //要素を並べて親を超えないまで、または2つ並べて親を超える場合は、flex-wrap無効、要素が3つ以上並べ親を超えるとflex-wrapが動作
 }  
 div.ヘア3 {
   border: 5px solid aqua;
@@ -71,7 +71,7 @@ div.ヘア3 {
   width: 47.5%;
   height: 90%; 
   box-sizing:border-box;
-  flex-basis: 47.5%;  //要素を並べて親を超えないまで、または2つ並べて親を超える場合は、flex-wrap無効、要素が3つ以上並べ親を超えるとflex-wrapが動作
+  flex-basis: auto;  //要素を並べて親を超えないまで、または2つ並べて親を超える場合は、flex-wrap無効、要素が3つ以上並べ親を超えるとflex-wrapが動作
  }
 div.ヘア4 {
   border: 5px solid aqua;
@@ -79,7 +79,7 @@ div.ヘア4 {
   width: 47.5%;
   height: 90%; 
   box-sizing:border-box;
-  flex-basis: 47.5%;  //要素を並べて親を超えないまで、または2つ並べて親を超える場合は、flex-wrap無効、要素が3つ以上並べ親を超えるとflex-wrapが動作
+  flex-basis: auto;  //要素を並べて親を超えないまで、または2つ並べて親を超える場合は、flex-wrap無効、要素が3つ以上並べ親を超えるとflex-wrapが動作
 }
   
 }
@@ -137,7 +137,7 @@ div.孫2 {
  width: 47.5%;
   height: 90%; 
   box-sizing:border-box;
-  flex-basis: 47.5%;  //要素を並べて親を超えないまで、または2つ並べて親を超える場合は、flex-wrap無効、要素が3つ以上並べ親を超えるとflex-wrapが動作  
+  flex-basis: auto;  //要素を並べて親を超えないまで、または2つ並べて親を超える場合は、flex-wrap無効、要素が3つ以上並べ親を超えるとflex-wrapが動作  
 }
 div.ヘア2 {
   border: 5px solid aqua;
@@ -145,7 +145,7 @@ div.ヘア2 {
   width: 47.5%;
   height: 90%; 
   box-sizing:border-box;
-  flex-basis: 47.5%;  //要素を並べて親を超えないまで、または2つ並べて親を超える場合は、flex-wrap無効、要素が3つ以上並べ親を超えるとflex-wrapが動作
+  flex-basis: auto;  //要素を並べて親を超えないまで、または2つ並べて親を超える場合は、flex-wrap無効、要素が3つ以上並べ親を超えるとflex-wrapが動作
 }  
 div.ヘア3 {
   border: 5px solid aqua;
@@ -153,7 +153,7 @@ div.ヘア3 {
   width: 47.5%;
   height: 90%; 
   box-sizing:border-box;
-  flex-basis: 47.5%;  //要素を並べて親を超えないまで、または2つ並べて親を超える場合は、flex-wrap無効、要素が3つ以上並べ親を超えるとflex-wrapが動作
+  flex-basis: auto;  //要素を並べて親を超えないまで、または2つ並べて親を超える場合は、flex-wrap無効、要素が3つ以上並べ親を超えるとflex-wrapが動作
  }
 div.ヘア4 {
   border: 5px solid aqua;
@@ -161,7 +161,7 @@ div.ヘア4 {
   width: 47.5%;
   height: 90%;  
   box-sizing:border-box;
-  flex-basis: 47.5%;  //要素を並べて親を超えないまで、または2つ並べて親を超える場合は、flex-wrap無効、要素が3つ以上並べ親を超えるとflex-wrapが動作
+  flex-basis: auto;  //要素を並べて親を超えないまで、または2つ並べて親を超える場合は、flex-wrap無効、要素が3つ以上並べ親を超えるとflex-wrapが動作
 }
   
 }  
@@ -219,7 +219,7 @@ div.ヘア1 {
   width: 45%;
   height: 90%; 
   box-sizing:border-box;
-  flex-basis: 45%;  //要素を並べて親を超えないまで、または2つ並べて親を超える場合は、flex-wrap無効、要素が3つ以上並べ親を超えるとflex-wrapが動作  
+  flex-basis: auto;  //要素を並べて親を超えないまで、または2つ並べて親を超える場合は、flex-wrap無効、要素が3つ以上並べ親を超えるとflex-wrapが動作  
 }
 div.ヘア2 {
   border: 5px solid aqua;
@@ -227,7 +227,7 @@ div.ヘア2 {
   width: 45%;
   height: 90%; 
   box-sizing:border-box;
-  flex-basis: 45%;  //要素を並べて親を超えないまで、または2つ並べて親を超える場合は、flex-wrap無効、要素が3つ以上並べ親を超えるとflex-wrapが動作
+  flex-basis: auto;  //要素を並べて親を超えないまで、または2つ並べて親を超える場合は、flex-wrap無効、要素が3つ以上並べ親を超えるとflex-wrapが動作
 }  
 div.ヘア3 {
   border: 5px solid aqua;
@@ -235,7 +235,7 @@ div.ヘア3 {
   width: 45%;
   height: 90%; 
   box-sizing:border-box;
-  flex-basis: 45%;  //要素を並べて親を超えないまで、または2つ並べて親を超える場合は、flex-wrap無効、要素が3つ以上並べ親を超えるとflex-wrapが動作
+  flex-basis: auto;  //要素を並べて親を超えないまで、または2つ並べて親を超える場合は、flex-wrap無効、要素が3つ以上並べ親を超えるとflex-wrapが動作
  }
 div.ヘア4 {
   border: 5px solid aqua;
@@ -243,7 +243,7 @@ div.ヘア4 {
   width: 45%;
   height: 90%; 
   box-sizing:border-box;
-  flex-basis: 45%;  //要素を並べて親を超えないまで、または2つ並べて親を超える場合は、flex-wrap無効、要素が3つ以上並べ親を超えるとflex-wrapが動作
+  flex-basis: auto;  //要素を並べて親を超えないまで、または2つ並べて親を超える場合は、flex-wrap無効、要素が3つ以上並べ親を超えるとflex-wrapが動作
 }
   
 }  
