--- a/style.css
+++ b/style.css
@@ -35,18 +35,20 @@ div.孫1 {
   border: 3px solid blue;
   background-color:rgba(0,0,250,0.2);
   width: 95%;
-  height: 45%; 
-  box-sizing:border-box;
-  flex-basis: 95%;  //要素を並べて親を超えないまで、または2つ並べて親を超える場合は、flex-wrap無効、要素が3つ以上並べ親を超えるとflex-wrapが動作  
+  height: 45%;
+  display: flex;
+  flex-wrap: nowrap;
+  box-sizing:border-box; 
 }
 
 div.孫2 {
   border: 3px solid green;
   background-color:rgba(0,250,0,0.2);
    width: 95%;
-  height: 45%; 
+  height: 45%;
+  display: flex;
+  flex-wrap: nowrap;
   box-sizing:border-box;
-  flex-basis: 95%;  //要素を並べて親を超えないまで、または2つ並べて親を超える場合は、flex-wrap無効、要素が3つ以上並べ親を超えるとflex-wrapが動作  
 }  
   
 div.ヘア1 {
@@ -118,17 +120,19 @@ div.親1 {
   background-color:rgba(0,0,250,0.2);
   width: 95%;
   height: 47.5%; 
+  display: flex;
+  flex-wrap: nowrap; 
   box-sizing:border-box;
-  flex-basis: 47.5%;  //要素を並べて親を超えないまで、または2つ並べて親を超える場合は、flex-wrap無効、要素が3つ以上並べ親を超えるとflex-wrapが動作  
 }
 
 div.孫2 {
   border: 3px solid green;
   background-color:rgba(0,250,0,0.2);
    width: 95%;
-  height: 47.5%; 
+  height: 47.5%;
+  display: flex;
+  flex-wrap: nowrap;
   box-sizing:border-box;
-  flex-basis: 47.5%;  //要素を並べて親を超えないまで、または2つ並べて親を超える場合は、flex-wrap無効、要素が3つ以上並べ親を超えるとflex-wrapが動作  
 } 
    
    div.ヘア1 {
@@ -200,8 +204,9 @@ div.孫1 {
   background-color:rgba(0,0,250,0.2);
   width: 45%;
   height: 95%; 
+  display: flex;
+  flex-wrap: nowrap;
   box-sizing:border-box;
-  flex-basis: 45%;  //要素を並べて親を超えないまで、または2つ並べて親を超える場合は、flex-wrap無効、要素が3つ以上並べ親を超えるとflex-wrapが動作  
 }
 
 div.孫2 {
@@ -209,8 +214,9 @@ div.孫2 {
   background-color:rgba(0,250,0,0.2);
   width: 45%;
   height: 95%; 
+   display: flex;
+  flex-wrap: nowrap;
   box-sizing:border-box;
-  flex-basis: 45%;  //要素を並べて親を超えないまで、または2つ並べて親を超える場合は、flex-wrap無効、要素が3つ以上並べ親を超えるとflex-wrapが動作  
 } 
    
 div.ヘア1 {
